--- a/homepage/static/css/sidebar.css
+++ b/homepage/static/css/sidebar.css
@@ -17,7 +17,7 @@
     left: 0;
     height: 100vh;
     z-index: 999;
-    background: #4F102B;
+    background: #0D8D9E;
     color: #fff;
     transition: all 0.3s;
 }
@@ -28,12 +28,12 @@
 
 .sidebar-header {
     padding: 20px;
-    background: #4F102B;
+    background: #0D8D9E;
 }
 
 .sidebar-components {
     padding: 20px 0;
-    border-bottom: 1px solid #4F102B;
+    border-bottom: 1px solid #0D8D9E;
 }
 
 .sidebar-paragraph {
@@ -60,14 +60,14 @@ a.right-arrow[data-toggle="collapse"] {
 }
 
 .sidebar-button:hover {
-    color: #4F102B;
+    color: #0D8D9E;
     background: #fff;
 }
 
 .sidebar-subitem {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #69163a;
+    background: #17BBD1;
 }
 
 ul.CTAs {
@@ -84,7 +84,7 @@ ul.CTAs a {
 
 a.nav-button {
     background: #fff;
-    color: #4F102B;
+    color: #0D8D9E;
 }
 
 .bottomleft {
