--- a/homepage/templates/login.html
+++ b/homepage/templates/login.html
@@ -18,14 +18,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">    
     <link rel="stylesheet" type="text/css" href="{% static 'css/sidebar.css' %}">    
     
-    <title>Invi - Login</title>
+    <title>DTS MANAGER - Login</title>
 
 </head>
 
 <body>
 
-<div class="align-middle" style="color: #ea2088; font-style: bold; font-size: 3rem;">Invi</div>
-<div class="align-middle" style="color: #fff">An Inventory Management System</div>
+<div class="align-middle" style="color: #17BBD1; font-style: bold; font-size: 3rem;">DTS MANAGER</div>
+<div class="align-middle" style="color: #000000">A Store Inventory Manager</div>
 <br><br><br>
 
 <div class="row d-flex justify-content-center">
@@ -45,7 +45,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     <fieldset class="form-group">
-                        <div class="align-middle"><legend class="border-bottom mb-4">Please Login to use Invi</legend></div>
+                        <div class="align-middle"><legend class="border-bottom mb-4">Enter Your Details</legend></div>
                         {{ form|crispy }}
                     </fieldset>
                     <div class="form-group">
