--- a/inventory/templates/edit_stock.html
+++ b/inventory/templates/edit_stock.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">{{title}}</div> 
+    <div style="color:#0D8D9E; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">{{title}}</div> 
     
     <br>
     
