--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -8,14 +8,14 @@
 
 {% block content %}
     
-    <div class="row" style="color: #ea2088; font-style: bold; font-size: 3rem; ">
+    <div class="row" style="color: #0D8D9E; font-style: bold; font-size: 3rem; ">
         <div class="col-md-8">Inventory List</div>
         <div class="col-md-4">               
             <div style="float:right;"> <a class="btn ghost-blue" href="{% url 'new-stock' %}">Add New Stock</a> </div>
         </div>
     </div>
     
-    <div style="border-bottom: 1px solid white;"></div>
+    <div style="border-bottom: 1px solid #0D8D9E;"></div>
     
     <br>
 
@@ -89,7 +89,7 @@
     </table>
 
     <br><br><br><br><br><br><br><br>
-    <div style="color: #ea2088; font-style: bold; font-size: 1.5rem; text-align: center;">WOW, SUCH EMPTY</div>
+    <div style="color: #0D8D9E; font-style: bold; font-size: 1.5rem; text-align: center;">NO STOCK</div>
 
 {% endif %}
 
