--- a/transactions/templates/sales/new_sale.html
+++ b/transactions/templates/sales/new_sale.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+i{% extends "base.html" %}
 {% load static %}
 
 
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">New Sale</div>
+    <div style="color:#0D8D9E; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">New Sale</div>
     
     <br>
 
@@ -46,7 +46,7 @@
                 {{ form.address }}
             </div>
             <div class="form-group">
-                <label for="{{ form.gstin.id_for_label }}" class="panel-body-text">GSTIN No:</label>
+                <label for="{{ form.gstin.id_for_label }}" class="panel-body-text">Item No:</label>
                 {{ form.gstin }}
             </div>
 
