--- a/transactions/templates/suppliers/edit_supplier.html
+++ b/transactions/templates/suppliers/edit_supplier.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">{{title}}</div> <br>
+    <div style="color:#0D8D9E; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">{{title}}</div> <br>
     
     <form method="post">
     
@@ -40,7 +40,7 @@
             {{ form.address }}
         </div>
         <div class="form-group">
-            <label for="{{ form.gstin.id_for_label }}">GSTIN No:</label>
+            <label for="{{ form.gstin.id_for_label }}">Item No:</label>
             {{ form.gstin }}
         </div>
 
