--- a/homepage/static/css/main.css
+++ b/homepage/static/css/main.css
@@ -41,7 +41,7 @@ label{
 }
 
 p{
-  color:#0d8d96;   /* For About */
+  color:#000000;   /* For About */
 }
 
 a{
@@ -53,7 +53,7 @@ ol li a{
 }
 
 ol,li,a:hover{
-  color:#ffffff ;
+  color:#000000 ;
 }
 
 .navbar-collapse > .navbar-nav { 
@@ -116,7 +116,7 @@ ol,li,a:hover{
 
 
 .table-css{
-  color:#ffffff;
+  color:#000000;
 }
 
 .btn-primary{
@@ -130,7 +130,7 @@ ol,li,a:hover{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #ffffff;
+  color: #000000;
 }
 
 ul {
@@ -310,9 +310,9 @@ html { width: 100%; height:100%; overflow:hidden; }
 
 
 .ghost-blue {
-  color: #228DFF;
+  color: #0a1045;
   background-color: transparent;
-  border: 2px solid #228DFF;
+  border: 2px solid #0a1045;
   font-size: 17px;
   padding: 7px 12px;
   font-weight: bolder;
@@ -327,14 +327,14 @@ html { width: 100%; height:100%; overflow:hidden; }
 .ghost-blue:hover, .ghost-blue:active {
   color:#fff;
   background-color:transparent;
-  box-shadow: 0 2px 7px #0000ff;
+  box-shadow: 0 2px 7px #fdd0b0;
 }
 
 
 .ghost-green {
-  color: #27ff34;
+  color: #0d8d9e;
   background-color: transparent;
-  border: 2px solid #27ff34;
+  border: 2px solid #0d8d9e;
   font-size: 17px;
   padding: 7px 12px;
   font-weight: bolder;
@@ -349,14 +349,14 @@ html { width: 100%; height:100%; overflow:hidden; }
 .ghost-green:hover, .ghost-green:active {
   color:#fff;
   background-color:transparent;
-  box-shadow: 0 2px 7px #27ff34;
+  box-shadow: 0 2px 7px #fdd0b0;
 }
  
 
 .ghost-pink {
-  color: #000080;
+  color: #0d8d9e;
   background-color: transparent;
-  border: 2px solid #000080;
+  border: 2px solid #0d8d9e;
   font-size: 17px;
   padding: 7px 12px;
   transition-duration: 0.2s;
@@ -371,7 +371,7 @@ html { width: 100%; height:100%; overflow:hidden; }
 .ghost-pink:hover, .ghost-pink:active {
   color:#fff;
   background-color:transparent;
-  box-shadow: 0 2px 7px #000080;
+  box-shadow: 0 2px 7px #fdd0b0;
 }
 
 
