--- a/homepage/templates/about.html
+++ b/homepage/templates/about.html
@@ -23,17 +23,14 @@
             </p>
         <br>
     </div>
-        <h2 style="color:#17BBD1" class="align-middle">| Features |</h3> <br>
-            <ul style="display:table; margin:0 auto;">                
-                <li>Interactive Chart to display current available stock</li>
-                <li>Stock details like current available stock are maintained</li>
-                <li>Incoming transactions are done through purchases</li>
-                <li>Outgoing transactions are done through sales</li>
-                <li>Every transaction performed through the software is recorded</li>
-                <li>Bill is dynamically rendered and can be printed</li>
-                <li>Separate profiles are maintained for suppliers</li>
-            </ul>  
+        <h2 style="color:#17BBD1" class="align-middle">| Features |</h2> <br>
         <br>
+        <div class="align-middle">
+            <h2 style="color:#000000"></h2>
+            <br>
+            <p>
+                The software boasts an engaging, interactive Chart that showcases the real-time availability of stock. Incoming transactions are seamlessly handled through the intuitive purchase functionality, while outgoing transactions are efficiently managed through the sales module. Every transaction performed within the software is meticulously recorded, ensuring a comprehensive audit trail. The dynamic billing feature allows for the generation of professional-looking invoices that can be easily printed. Furthermore, the software maintains separate profiles for suppliers, empowering users to streamline their business operations with precision and ease.
+            </p>
     </div>
 
 {% endblock content %}
