--- a/transactions/templates/purchases/new_purchase.html
+++ b/transactions/templates/purchases/new_purchase.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <div style="color:#ea2088; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">New Purchase</div>
+    <div style="color:#0D8D9E; font-style: bold; font-size: 3rem; border-bottom: 1px solid white;">New Purchase</div>
     
         <br>
 
@@ -26,7 +26,7 @@
                         <input type="text" class="form-control textinput" id="id_phone" value="{{ supplier.phone }}" disabled>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="id_gstin" class="panel-body-text">GSTIN No:</label>
+                        <label for="id_gstin" class="panel-body-text">Item No:</label>
                         <input type="gstin" class="form-control textinput" id="id_gstin" value="{{ supplier.gstin }}" disabled>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
 
             <div class="align-middle">
                 <button type="submit" class="btn ghost-green">Add to Purchases</button>
-                <a href="{% url 'select-supplier' %}" class="btn ghost-button">Go Back</a>
+                <a href="{% url 'select-supplier' %}" class="btn ghost-button">Back</a>
                 <a href="{% url 'purchases-list' %}" class="btn ghost-button">Cancel</a>
             </div>
             
