--- a/transactions/templates/purchases/purchases_list.html
+++ b/transactions/templates/purchases/purchases_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     
-    <div class="row" style="color: #ea2088; font-style: bold; font-size: 3rem;">
+    <div class="row" style="color: #0D8D9E; font-style: bold; font-size: 3rem;">
         <div class="col-md-8">Purchases List</div>
         <div class="col-md-4">               
             <div style="float:right;"> <a class="btn ghost-blue" href="{% url 'select-supplier' %}">New Incoming Stock</a> </div>
@@ -43,7 +43,7 @@
                     {% else %}
                         <a href="{% url 'supplier' purchase.supplier.name %}">{{ purchase.supplier }}</a> <br> 
                     {% endif %}
-                    <small style="color: #909494">Ph No : {{ purchase.supplier.phone }}</small> 
+                    <small style="color: #0D8D9E">Ph No : {{ purchase.supplier.phone }}</small> 
                 </td>
                 <td class="align-middle">{% for item in purchase.get_items_list %} {{ item.stock.name }} <br> {% endfor %}</td>
                 <td class="align-middle">{% for item in purchase.get_items_list %} {{ item.quantity }} <br> {% endfor %}</td>     
@@ -86,7 +86,7 @@
     </table>
 
     <br><br><br><br><br><br><br><br>
-    <div style="color: #ea2088; font-style: bold; font-size: 1.5rem; text-align: center;">WOW, SUCH EMPTY</div>
+    <div style="color: #0D8D9E; font-style: bold; font-size: 1.5rem; text-align: center;">No Purchases Yet!</div>
 
 {% endif %}
 
