--- a/transactions/templates/sales/sales_list.html
+++ b/transactions/templates/sales/sales_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     
-    <div class="row" style="color: #ea2088; font-style: bold; font-size: 3rem;">
+    <div class="row" style="color: #0D8D9E; font-style: bold; font-size: 3rem;">
         <div class="col-md-8">Sales List</div>
         <div class="col-md-4">               
             <div style="float:right;"> <a class="btn ghost-blue" href="{% url 'new-sale' %}">New Outgoing Stock</a> </div>
@@ -37,7 +37,7 @@
             {% for sale in bills %}
             <tr>
                 <td class="align-middle"> <h3>{{ sale.billno }}</h3> </td>
-                <td class=""> {{ sale.name }} <br> <small style="color: #909494">Ph No : {{ sale.phone }}</small> </td>
+                <td class=""> {{ sale.name }} <br> <small style="color: #0D8D9E">Ph No : {{ sale.phone }}</small> </td>
                 <td class="align-middle">{% for item in sale.get_items_list %} {{ item.stock.name }} <br> {% endfor %}</td>
                 <td class="align-middle">{% for item in sale.get_items_list %} {{ item.quantity }} <br> {% endfor %}</td>     
                 <td class="align-middle">{{ sale.get_total_price }}</td>
@@ -79,7 +79,7 @@
     </table>
 
     <br><br><br><br><br><br><br><br>
-    <div style="color: #ea2088; font-style: bold; font-size: 1.5rem; text-align: center;">WOW, SUCH EMPTY</div>
+    <div style="color: #0D8D9E; font-style: bold; font-size: 1.5rem; text-align: center;">No Sale Yet!</div>
 
 {% endif %}
 
