--- a/transactions/templates/suppliers/suppliers_list.html
+++ b/transactions/templates/suppliers/suppliers_list.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     
-    <div class="row" style="color: #ea2088; font-style: bold; font-size: 3rem;">
+    <div class="row" style="color: #0D8D9E; font-style: bold; font-size: 3rem;">
         <div class="col-md-8">Suppliers List</div>
         <div class="col-md-4">               
             <div style="float:right;"> <a class="btn ghost-blue" href="{% url 'new-supplier' %}">Add New Supplier</a> </div>
@@ -23,7 +23,7 @@
             <tr>
                 <th width="25%">Name</th>
                 <th width="20%">Phone No</th>
-                <th width="25%">GSTIN No</th>
+                <th width="25%">Item No</th>
                 <th width="30%">Actions</th>
             </tr>
         </thead>
@@ -80,7 +80,7 @@
     </table>
 
     <br><br><br><br><br><br><br><br>
-    <div style="color: #ea2088; font-style: bold; font-size: 1.5rem; text-align: center;">WOW, SUCH EMPTY</div>
+    <div style="color: #0D8D9E; font-style: bold; font-size: 1.5rem; text-align: center;">No Supplier Yet!</div>
 
 {% endif %}
 
